Get a global MongoDB connection.

--- a/development.ini
+++ b/development.ini
@@ -35,6 +35,9 @@ beaker.session.secret = somesecret
 # execute malicious code after an exception is raised.
 #set debug = false
 
+mongo.host = localhost
+mongo.port = 27017
+mongo.db = quotehi
 
 # Logging configuration
 [loggers]
